--- a/style.css
+++ b/style.css
@@ -239,3 +239,11 @@ body {
   transition: background 120ms ease;
 }
 
+#FPSCounter {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  padding: 10px;
+  color: grey;
+  z-index: 999;
+}
